--- a/app/assets/scss/main.scss
+++ b/app/assets/scss/main.scss
@@ -1,5 +1,10 @@
-$color: #262828;
+html {
+  font-size: 10px;
+}
 
-body {
-  color: $color;
+html, body, #app {
+  font-family: 'Quattrocento Sans', sans-serif;
+  height:100%;
+  margin: 0;
+  min-height:100%;
 }
